src/components/Screens/User/Registation/Registation.module.scss
.registration {
    &Form {
        height: 100%;
        margin: 0 auto;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        gap: 64px;

        width: 100%;
        box-sizing: border-box;
        padding: 0 24px;
    }

    &Title {
        display: flex;
        flex-direction: column;
        gap: 16px;
        align-items: center;
        text-align: center;

        > p {
            color: var(--color-grey)
        }
    }

    &Controllers, &Buttons, &Inputs { 
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 16px;
    }

    &Buttons {
        gap: 12px;
        text-align: center;
        align-items: center;
        > p {
            color: var(--color-grey-dark)
        }
    }

    &Controllers {
        gap: 48px;
    }
}
@media (max-height: 760px) {
    .registration {
        &Form {
            margin-top: 64px;
            height: auto;
            justify-content: flex-start;

            gap: 48px;
            padding-bottom: 24px;
        }
    }
    .ScrollWrapper {
        height: calc(100dvh - 67px);
    }
}

